[package]
name = "clparse"
version = "0.1.0"
description = "A command line tool for parsing CHANGELOGd files that use the Keep A Changelog format."
authors = ["Marc Addeo <hi@marc.cx>"]
edition = "2018"

[lib]
name = "clparse"
path = "src/lib.rs"

[[bin]]
name = "clparse"
path = "src/main.rs"

[dependencies]
semver = { version = "0.9.0", features = ["serde"] }
pulldown-cmark = "0.5.3"
chrono = { version = "0.4.7", features = ["serde"] }
derive_builder = "0.7.2"
failure = "0.1.5"
serde = "1.0.100"
serde_derive = "1.0.100"
serde_json = "1.0.40"
clap = { version = "2.33.0", features = ["yaml", "suggestions", "color"] }
serde_yaml = "0.8.9"
fstrings = "0.1.4"
