[package]
name = "clparse"
version = "0.8.0"
description = "A command line tool for parsing CHANGELOG.md files that use the Keep A Changelog format."
keywords = ["changelog", "parser", "keepachangelog"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
homepage = "https://github.com/marcaddeo/clparse"
repository = "https://github.com/marcaddeo/clparse"
documentation = "https://github.com/marcaddeo/clparse#clparse"
authors = ["Marc Addeo <hi@marc.cx>"]
license = "MIT"
edition = "2018"
exclude = [
    ".cl",
    ".gitignore",
    "scripts"
]

[lib]
name = "clparse"
path = "src/lib.rs"

[[bin]]
name = "clparse"
path = "src/main.rs"

[dependencies]
semver = { version = "0.10.0", features = ["serde"] }
pulldown-cmark = "0.5.3"
chrono = { version = "0.4.7", features = ["serde"] }
derive_builder = "0.7.2"
serde = "1.0.100"
serde_derive = "1.0.100"
serde_json = "1.0.40"
clap = { version = "2.33.0", features = ["yaml", "suggestions", "color"] }
serde_yaml = "0.8.9"
indexmap = "1.2.0"
anyhow = "1.0.3"
err-derive = "0.2.4"
derive-getters = "0.1.0"
textwrap = "0.11.0"
